# coin-detector

./: CMakeLists.txt  README.md  coinDetector
src/: edge.cpp  edge.h  hough.cpp  hough.h  list.cpp  list.h  main.cpp
